--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <title>React App</title>
+  <title>WebGenius</title>
 </head>
 
 <body>
