--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/img/logo-icon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#009CFF" />
   <meta name="description" content="Turning Ideas into Digital Realities" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo-icon.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <title>WebGenius</title>
+  <title>WestCoders</title>
 </head>
 
 <body>
